Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18920

Prepared statements with st_convexhull hang and eat 100% cpu

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.3.13, 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL)
    • 10.1.39
    • GIS, Prepared Statements
    • None
    • WinX64

    Description

      Prepared statements with st_convexhull hang and eat 100% cpu

      *************************** 6. row ***************************
            Id: 9
          User: root
          Host: localhost:7859
            db: test
       Command: Query
          Time: 69
         State: NULL
          Info: do st_convexhull(st_aswkb(multipoint(point(-11702,15179),point(-5031,27960),point(-30557,11158),point(-27804,30314))))
      Progress: 0.000
      

      *Testcase
      ---------*

      prepare s from 'do st_convexhull(st_aswkb(multipoint(point(-11702,15179),point(-5031,27960),point(-30557,11158),point(-27804,30314))))';
      execute s;
      execute s;
      

      Attachments

        Activity

          People

            holyfoot Alexey Botchkov
            sbester1 sbester1
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d
                1d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.