MDEV-18920 Prepared statements with st_convexhull hang and eat 100% cpu.

In the case of error when object shapes are half-collected we need
to set the NULL at the vertice's list.